--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -174,9 +174,10 @@
 <div class="codingSectionName">Binary tree</div>
 <ul>
     <li><a href="lecture/Lecture_3._Binary_Tree__Divide_Conquer.v3.4.pdf">Lecture</li>
-	<li><a href="solution/BinaryTreeDivideAndConquer.html">Divided and Conquer(分治理解+经典题)</li>
-	<li><a href="solution/BinaryTreePathSum.html">Binary Tree Paths(遍历理解)</a> <a href=https://leetcode.com/problems/binary-tree-paths/description/>Q</a>  </li>
-  <li><a href="solution/pathSumIII.html">Binary Tree Path III(遍历套遍历 分治套分治（加的逻辑)</a> <a href=https://leetcode.com/problems/path-sum-iii/description/>Q</a>  </li>
+	<li><a href="solution/BinaryTreeDivideAndConquer.html">Category 1: Divided and Conquer(分治理解+经典题)</li>
+	<li><a href="solution/BinaryTreePathSum.html">Category 2: Binary Tree Paths(遍历理解)</a> <a href=https://leetcode.com/problems/binary-tree-paths/description/>Q</a>  </li>
+   <li><a href=https://leetcode.com/problems/maximum-binary-tree/>>Category 3: 矩阵变成二叉树写法(简单递归返回值)</a>  </li>
+   <li><a href="solution/pathSumIII.html">Binary Tree Path III(遍历套遍历 分治套分治（加的逻辑)</a> <a href=https://leetcode.com/problems/path-sum-iii/description/>Q</a>  </li>
   <li><a href="solution/isSubTree.html">isSubTree（遍历套分治 分治套分治） </a> <a href="https://leetcode.com/problems/subtree-of-another-tree/description/">Q</a>  </li>
   <li><a href="https://leetcode.com/problems/diameter-of-binary-tree/">Diameter of binary tree(分治套分治)</a>  </li>
   <li><a href=https://leetcode.com/problems/unique-binary-search-trees-ii>unique binary search trees(general DFS, return all BST)</a>
@@ -185,8 +186,17 @@
   <li><a href="solution/nArrayTreeSerilization.html">Serialize/Deserialize N arr tree(preorder 遍历 to serialize)</a> <a href=https://leetcode.com/problems/serialize-and-deserialize-n-ary-tree>Q</a></li>
   <li><a href=https://leetcode.com/problems/closest-leaf-in-a-binary-tree/>closest leaf in a binary tree(convert tree to graph)</a></li>
   <li><a href="solution/LowestCommonAccestorOfDeepest.html">Lowest Common Accestor Of Deepest</a> <a href=https://leetcode.com/problems/closest-leaf-in-a-binary-tree/>Q</a></li>
-  
 </ul>
+
+
+<div class="codingSectionName">Convert Tree series </div>
+<ul>
+	<li><a href="solution/convertBSTToDoublyLinkedList.html">Convert Binary Search Tree to Double linkedlist</a> <a href=https://leetcode.com/problems/convert-binary-search-tree-to-sorted-doubly-linked-list/>Q</a></li>
+	<li><a href="https://leetcode.com/problems/convert-sorted-array-to-binary-search-tree/">Convert sorted array to balanced binary search tree</a></li>
+	<li><a href="https://leetcode.com/problems/convert-sorted-list-to-binary-search-tree/">Convert sorted linkedlist to balanced binary search tree</a></li>
+
+</ul>
+
 
 <div class="codingSectionName"> Linked List</div>
 <ul>
@@ -414,7 +424,7 @@
 <div class="codingSectionName">Interview</div>
 <ul>
    
-       <li><a href="interview/InterviewJava.html">Java简易写法</a> </li>
+       <li><a href="interview/JavaSyntaxSugar.html">Java简易写法</a> </li>
 
      	 <li><a href="interview/InterviewSummary.txt">面试心得</a> </li>
      	 <li><a href="interview/CompanyLevelProcess.txt">各大公司面试流程和职位等级</a> </li>
