--- a/html/interview/interview.html
+++ b/html/interview/interview.html
@@ -50,36 +50,25 @@ coding: 543(ok), 42(ok), 56(ok), 297(ok), 88(ok), 23(ok), 773(ok), 84(ok)
 416(ok), 435(ok), 236(ok), (858), 1047(ok), 211(ok), 10(ok), 191(ok), 125(ok), 78(ok)， 339, 71变体(ok), 239变体(ok), 498 变体(ok) 单向右上(每一层都翻转 ok)
 1123(ok), 47(ok), 154(ok), 1275(n*n O(1) ok) 986（ok), 1197(ok), 200(ok), 1026(ok)， 987（ok) 1091（ok)， 392（ok)，785（ok)
 40(ok, follow up 39)， 69(ok)， 158(ok)，227(ok), 224(ok), 155(ok)， 1570（ok), 211(ok), 465(ok), (967)，415（ok), 43(ok)
-
-
-925
-
-                                          OCI coding:
-102(ok)
-1143->583 ( Longest common subsequence), 402(greedy), 210(ok)
-
-
-
-Bq: 1rd 15 minutes bq
-    2rd project deep diving 20mins
-    3rd 30 minutes project diving
-    4th 20 minutes bq
-    5th project deep diving
+387(ok) 925
 
 
 
 
-Dropbox  
-
-289
 
 
-                                          FB: Desgin:
-Summary:
+                        
+FB: Desgin:
 Crawler:
-Type Ahead:
+Type Ahead(auto-complete):
 leaderboard:
 Top10:
+
+
+
+
+
+
 
 
 Design 1:
