--- a/html/interview/time.html
+++ b/html/interview/time.html
@@ -519,5 +519,27 @@ number   Date        rank         score    Finish time     Q1              Q2   
 10/12                            Phone FB
 10/13                            Phone Square 
 10/14
+
+
+
+
+
+4/6/2021
+4/5(M) 
+4/6       1.5                   10-11：30 coding
+4/7       1.5                   9am - 9:30 (看幼儿园)  3：30 - 4:30 SF
+4/8       2                     9:15  SF 1016  1030 - 1130
+4/9       2.5                   10:30 - 1130 SF OA    4-5;
+4/10      3                     10-11  4-6
+4/11      3                     10：30-12：30    200-2：30 5-6
+          13.5
+ 
+          
+
+4/12      1                     10:40  - 11：40
+4/13      0                     (clayton to pay property tax)
+4/14      1.5                      1030 1144
+4/15      1                     830 - 930  (vaccine ride)
+4/16      1.5                   950 - 1120
 </code></pre>
 </body>
