--- a/html/interview/time.html
+++ b/html/interview/time.html
@@ -540,6 +540,13 @@ number   Date        rank         score    Finish time     Q1              Q2   
 4/13      0                     (clayton to pay property tax)
 4/14      1.5                      1030 1144
 4/15      1                     830 - 930  (vaccine ride)
-4/16      1.5                   950 - 1120
+4/16      2                     950 - 1150  coding
+4/17      4                     200 - 440    612 720  930-1000
+4/18      0                     tax/SNI work 
+          9.5
+
+4/19      1.5        1            1020 - 1150     8-9 design
+4/20                            10-12  220
+
 </code></pre>
 </body>
