--- a/html/solution/reverseLinkedList.html
+++ b/html/solution/reverseLinkedList.html
@@ -38,6 +38,7 @@ public class Solution {
 <div class="comment">
 While 外部保存pre,cur指针，
 while 内部维持next指针
+// 结束以后，pre就是联表的头，cur是pre后面的那一个结点，在这里为null
 
 </div>
 
