--- a/html/solution/Design_Youtube.html
+++ b/html/solution/Design_Youtube.html
@@ -39,10 +39,10 @@ return the video stream starting from offset.
 Step 3: Service Architecture
 <img src="../../img/youtube.png" width="800px" height="800px">
 
-               Web server  ->  App server -> distributed File System (S3)
+               Web server  ->  App server -> distribute File System (S3)  for large file like(log, video, image)
 
                                     |
-                                 metadata Database
+                              metadata Database
 
 
 
