--- a/html/interview/time.html
+++ b/html/interview/time.html
@@ -546,7 +546,7 @@ number   Date        rank         score    Finish time     Q1              Q2   
           9.5
 
 4/19      1.5        1            1020 - 1150     8-9 design
-4/20                            10-12  220
+4/20      2          1            10-12  830-930 design
 
 </code></pre>
 </body>
