--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -8,18 +8,17 @@
 </head>
 
 <body>
-<pre><code>
-Online Design resources:
-1. Educative(best courses：入门级别的): https://www.educative.io/courses/grokking-the-system-design-interview/m2yDVZnQ8lG
-2. Design Data Intensive application(理论支持)
-3. Engineering blog/presentation（工业界的具体实现）
-   blog example: <li> <a href=" https://eng.uber.com/cherami/">Uber Engineerig Blog</a></li>
+Online Design resources:<br>
+1. Educative(best courses：入门级别的): https://www.educative.io/courses/grokking-the-system-design-interview/m2yDVZnQ8lG　　<br>
+2. Design Data Intensive application(理论支持)　　<br>
+3. Engineering blog/presentation（工业界的具体实现）<br>
+   blog example: <li> <a href=" https://eng.uber.com/cherami/">Uber Engineerig Blog</a></li>　
 
-   presentation exapmle: https://www.infoq.com/presentations/pinterest/
+   presentation exapmle: https://www.infoq.com/presentations/pinterest/<br>
 
 
-4. Github Facebook design questions(写的一般): https://github.com/donnemartin/system-design-primer
-5. jiuzhang design tutorial(没有撒用) https://www.jiuzhang.com/accounts/profile/registered_courses/75/
+4. Github Facebook design questions(写的一般): https://github.com/donnemartin/system-design-primer<br>
+5. jiuzhang design tutorial(没有撒用) https://www.jiuzhang.com/accounts/profile/registered_courses/75/<br>
 6. <li> <a href="https://acecodeinterview.com">Ace System Design</a></li>
 
 
@@ -29,11 +28,11 @@ Online Design resources:
 <br>
 <br>
 
-How to prepare System design:
-1. 一亩三分地讲如何准备： https://www.1point3acres.com/bbs/forum-323-1.html
-2. 一亩三分地面经：https://www.1point3acres.com/bbs/forum.php?mod=forumdisplay&fid=145&filter=sortid&sortid=311&orderby=dateline
-3. 如何对着公司准备：
-   “对每家onsite的公司 -> 在地里翻完最近两年所有onsite面筋aggregate所有design题目 -> 对每个题目找工业界实现的blog -> 阅读每个blog，选中最好的一到两个 -> 读到烂熟，整理出我当面试官的话会问的所有问题不停考自己 -> 白板英文自行mock 3遍 -> over”
+How to prepare System design:<br>
+1. 一亩三分地讲如何准备： https://www.1point3acres.com/bbs/forum-323-1.html<br>
+2. 一亩三分地面经：https://www.1point3acres.com/bbs/forum.php?mod=forumdisplay&fid=145&filter=sortid&sortid=311&orderby=dateline　　<br>
+3. 如何对着公司准备：<br>
+   “对每家onsite的公司 -> 在地里翻完最近两年所有onsite面筋aggregate所有design题目 -> 对每个题目找工业界实现的blog -> 阅读每个blog，选中最好的一到两个 -> 读到烂熟，整理出我当面试官的话会问的所有问题不停考自己 -> 白板英文自行mock 3遍 -> over”　<br>
 
 <br>
 <br>
@@ -41,15 +40,22 @@ How to prepare System design:
 <br>
 
 
-<li> <a href="Design_NewsFeed.html">Newsfeed : Facebook/Instangram/Twitter/微信朋友圈/Sina Weibo </a></li>
-<li> <a href="Design_Chat.html">Chat System: Facebook Chat/What's App/We chat </a></li>
-<li> <a href="Design_Memcached.html">Memcached</a></li>
-<li> <a href="Design_Youtube.html">Streaming System: Netflix, Youtube</a> </li>
-<li> <a href="Design_Uber.html">Location APP: Uber/Lyft/Yelp</a> </li>
-<li> <a href="Design_rateLimiter.html">Rate limiter</a></li>
+
+
+高频率题目
+<li> <a href="Design_NewsFeed.html">Twitter</a></li>
+<li> <a href="Design_Chat.html">What's App</a></li>
+<li> <a href="Design_Youtube.html">Youtube</a> </li>
+<li> <a href="Design_Uber.html">Uber</a> </li>
 <li> <a href="Design_TypeAhead.html">TypeAhead</a></li>
-<li> <a href="Design_dropbox.html">DropBox</a></li>
 <li> <a href="Design_Crawler.html">Crawler</a></li>
+
+
+
+
+<li> <a href="Design_Memcached.html">Memcached</a></li>
+<li> <a href="Design_rateLimiter.html">Rate limiter</a></li>
+<li> <a href="Design_dropbox.html">DropBox</a></li>
 <li> <a href="Design_Kafka.html">Kafka</a></li>
 
 
@@ -60,20 +66,19 @@ Design Short URL
 
 
 Fb Design summary:
-https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=680958&extra=page%3D1%26filter%3Dsortid%26sortid%3D311%26searchoption%5B3086%5D%5Bvalue%5D%3D10%26searchoption%5B3086%5D%5Btype%5D%3Dradio%26searchoption%5B3087%5D%5Bvalue%5D%3D4%26searchoption%5B3087%5D%5Btype%5D%3Dradio%26searchoption%5B3046%5D%5Bvalue%5D%3D2%26searchoption%5B3046%5D%5Btype%5D%3Dradio%26searchoption%5B3109%5D%5Bvalue%5D%3D2%26searchoption%5B3109%5D%5Btype%5D%3Dradio%26sortid%3D311%26orderby%3Ddateline
+https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=680958&extra=page%3D1%26filter%3Dsortid%26sortid%3D311%26searchoption%5B3086%5D%5Bvalue%5D%3D10%26searchoption%5B3086%5D%5Btype%5D%3Dradio%26searchoption%5B3087%5D%5Bvalue%5D%3D4%26searchoption%5B3087%5D%5Btype%5D%3Dradio%26searchoption%5B3046%5D%5Bvalue%5D%3D2%26searchoption%5B3046%5D%5Btype%5D%3Dradio%26searchoption%5B3109%5D%5Bvalue%5D%3D2%26searchoption%5B3109%5D%5Btype%5D%3Dradio%26sortid%3D311%26orderby%3Ddateline　　　<br>
 
 
-3. Instagram (Photo uploading, build timeline, followers, this is a read heavy system)
-4. Design a translation system (I guess this Product/API design)
-5. Design craigslist (User, product catalog, scaling)
-6. 图片浏览器 (not sure what this means, but most likely it is Product/API design)
-7. Design system for ad click count
-8. Design Youtube
-9. Design WhatsApp crash log collection and analytic system
-10. Design a job scheduler (see async)
-11. Design a system to return top hashtag of the feeds with a week (or some period)
-12. Typeahead (trie)
-13. News Feed
+3. Instagram (Photo uploading, build timeline, followers, this is a read heavy system)　<br>
+4. Design a translation system (I guess this Product/API design)<br>
+5. Design craigslist (User, product catalog, scaling)<br>
+6. 图片浏览器 (not sure what this means, but most likely it is Product/API design)<br>
+7. Design system for ad click count<br>
+8. Design Youtube<br>
+9. Design WhatsApp crash log collection and analytic system<br>
+10. Design a job scheduler (see async)<br>
+11. Design a system to return top hashtag of the feeds with a week (or some period)<br>
+12. Typeahead<br>
 
 
 
