--- a/html/solution/Design_Chat.html
+++ b/html/solution/Design_Chat.html
@@ -6,6 +6,12 @@
 
 <pre><code>
 
+实用范围：　Chat System: 
+Facebook Chat
+What's App
+We chat 
+
+
 https://www.educative.io/courses/grokking-the-system-design-interview/B8R22v0wqJo  grokking-the-system-design-interview
 
 
