--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -65,7 +65,7 @@ Design Short URL
 
 
 
-Fb Design summary:
+Fb Design summary:<br>
 https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=680958&extra=page%3D1%26filter%3Dsortid%26sortid%3D311%26searchoption%5B3086%5D%5Bvalue%5D%3D10%26searchoption%5B3086%5D%5Btype%5D%3Dradio%26searchoption%5B3087%5D%5Bvalue%5D%3D4%26searchoption%5B3087%5D%5Btype%5D%3Dradio%26searchoption%5B3046%5D%5Bvalue%5D%3D2%26searchoption%5B3046%5D%5Btype%5D%3Dradio%26searchoption%5B3109%5D%5Bvalue%5D%3D2%26searchoption%5B3109%5D%5Btype%5D%3Dradio%26sortid%3D311%26orderby%3Ddateline　　　<br>
 
 
@@ -77,7 +77,7 @@ https://www.1point3acres.com/bbs/forum.php?mod=viewthread&tid=680958&extra=page%
 8. Design Youtube<br>
 9. Design WhatsApp crash log collection and analytic system<br>
 10. Design a job scheduler (see async)<br>
-11. Design a system to return top hashtag of the feeds with a week (or some period)<br>
+11. Design a system to return top hashtag of the feeds with a week (or some period)
 12. Typeahead<br>
 
 
