--- a/html/solution/BinaryTreeDivideAndConquer.html
+++ b/html/solution/BinaryTreeDivideAndConquer.html
@@ -4,26 +4,18 @@
    <link rel="stylesheet" type="text/css" href="../../css/utility.css">     <!-- external css file -->
 </head>
 
-<h2>
 
-二分树分治理解：<br>
+二分树分治理解：一口气走到二叉树最底层，然后往上回溯加商业逻辑<br>
+分治的特征： 有返回值，从下往上走<br>
+<br>
+<br>
 
+分治先决条件：想清楚这个分治返回的是什么。（如果你这个没有想清楚， 题目是做不出来的）<br>
 
-1. 可以理解成先一口气走到二叉树最底层，然后往上回溯加商业逻辑。
-</h2>
-
-
-<p>  分治模板  </p>
-分治的特征： 有返回值，从下往上走。
-
-
-
-分治最难的地方：想清楚这个递归在干什么，返回的是什么。（如果你这个没有想清楚， 题目是做不出来的）
-
-分治三部曲：
-1. 结束条件
-2. 往下走
-3. 往上走加逻辑
+分治3部曲：
+1. 结束条件.
+2. 左儿子返回什么，右儿子返回什么.
+3. 返回什么给父结点.
 
 
 <pre><code>
