--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -20,6 +20,12 @@ Online Design resources:<br>
 4. Github Facebook design questions(写的一般): https://github.com/donnemartin/system-design-primer<br>
 5. jiuzhang design tutorial(没有撒用) https://www.jiuzhang.com/accounts/profile/registered_courses/75/<br>
 6. <li> <a href="https://acecodeinterview.com">Ace System Design</a></li>
+7. 读论文
+
+Amazon Dynamo DB(读论文感觉效果很差，读着读这就走神了，还是要看讲解论文的文章)
+https://www.allthingsdistributed.com/2007/10/amazons_dynamo.html
+
+
 
 
 
@@ -51,7 +57,10 @@ How to prepare System design:<br>
 <li> <a href="Design_Crawler.html">Crawler</a></li>
 
 
-
+<br>
+<br>
+<br>
+<br>
 
 <li> <a href="Design_Memcached.html">Memcached</a></li>
 <li> <a href="Design_rateLimiter.html">Rate limiter</a></li>
