--- a/html/interview/JavaSyntaxSugar.html
+++ b/html/interview/JavaSyntaxSugar.html
@@ -58,6 +58,10 @@ for( int i : arr){
    new ArrayList<Integer>(m.values())
 
 
+5. How to parse hashmap: keySet()
+   for( int key : m.keySet()){
+      int value = m.get(key);
+   }
 
 
 
@@ -82,6 +86,14 @@ a     List<Integer> ret = Arrays.asList(1, 2, 3, 4, 5);
 List<int[]> ret = new ArrayList<>();
 
    return ret.toArray(new int[ret.size()][]);
+
+
+
+
+ArrayList takes HashSet 
+    HashSet<String> set = new HashSet<>();
+    return new ArrayList<String>(set)
+
 
 
                                                 
