--- a/html/solution/RussionDoll.html
+++ b/html/solution/RussionDoll.html
@@ -36,7 +36,7 @@ Solution I DP: O(n^2)
         Arrays.sort(envelopes, (a,b)->(a[0] - b[0]));
         
         for( int i=1; i<envelopes.length; i++){
-            for( int j=0; j&lt;i; j++){
+            for( int j=0; j<i; j++){
                 if (envelopes[i][0] >envelopes[j][0] && envelopes[i][1] > envelopes[j][1] ){
                     dp[i] = Math.max(dp[i], dp[j] + 1);
                 }
@@ -73,7 +73,7 @@ class Solution {
         for( int i=1; i<envelopes.length; i++){
             int cur[] = envelopes[i];
             
-            if ( cur[1] &lt; table[0]){
+            if ( cur[1] < table[0]){
                 table[0] = cur[1];
             }else if ( cur[1] > table[len-1]){
                 table[len] = cur[1];
